fix lightning set bonus being applied to every armor set instead of copper only
closes #21