@@ -20,7 +20,6 @@ import net.minecraftforge.event.entity.living.LivingEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Events {
 
@@ -33,8 +32,8 @@ public class Events {
             Level level = event.getWorld();
             List<LivingEntity> entities = level.getEntitiesOfClass(LivingEntity.class, AABB.ofSize(vec, 20, 20, 20))
                     .stream()
-                    .filter(livingEntity -> Armor.getArmorSetType(livingEntity) != ArmorTiers.COPPER)
-                    .collect(Collectors.toList());
+                    .filter(livingEntity -> Armor.getArmorSetType(livingEntity) == ArmorTiers.COPPER)
+                    .toList();
 
             if (!entities.isEmpty()) {
                 LivingEntity entity1 = entities.get(level.random.nextInt(entities.size()));
